# grimoire

./: Cargo.toml  LICENSE  README.md
assets/css/: main.css
posts/: 1-hello-world.md
src/: main.rs
templates/: index.html.tmpl  post.html.tmpl
